# jsonapi-client-framework

./: .mypy.ini  requirements-dev.txt  ruff.toml  setup.cfg
.circleci/: config.yml
jsonapi_client/: __init__.py  collection.py  parser.py  resource.py  resources_list.py  schema.py
tests/: __init__.py  test_client.py  test_parser.py  test_resource_schema.py
tests/fixtures/: media.json  movie.json  movies.json
