[metadata]
name = jsonapi-client-framework
version = attr: jsonapi_client.VERSION
author = Felipe Batista da Silva
author_email = contact@batistadasilva.com
description = An object-oriented framework for JSON:API clients.
keywords = jsonapi
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
project_urls =
    Homepage = "https://github.com/hostnfly/jsonapi-client-framework"
    Issues = "https://github.com/hostnfly/jsonapi-client-framework/issues"

[options]
python_requires = >=3.8
install_requires =
    requests >= 2
    jsonpickle >= 4
    dataclasses-json
